--- a/day3/15.tablecss.css
+++ b/day3/15.tablecss.css
@@ -1,7 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Gamja+Flower&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Dokdo&family=Gamja+Flower&display=swap');
  *{
-     font-family:'Gamja Flower', cursive;
-    font-size:medium;
+    font-family: 'Dokdo', cursive;
+    font-family: 'Gamja Flower', cursive;
  }
  
     
